update articles